kubernetes/prod/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: gpodashprod
  name: gpodashdeployment
  labels:
    app: gpodashapp
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: gpodashapp
  template:
    metadata:
      labels:
        app: gpodashapp
    spec:
      containers:
      - image: docker.artifactory.sherwin.com/gpo/sw-corp-it/sw_plopsboard:latest
        imagePullPolicy: Always
        name: gpodashapp
        ports:
        - containerPort: 7070
        resources: {}
      restartPolicy: Always
status: {}
